finally evaluate functions